# SPDX-FileCopyrightText: © 2024 Claudio Cicconetti <c.cicconetti@iit.cnr.it>
# SPDX-License-Identifier: MIT

[package]
name = "qnet_ll-sim"
version = "0.1.0"
authors = ["Claudio Cicconetti <c.cicconetti@iit.cnr.it>"]
edition = "2021"
license-file = "LICENSE"
description = "Quantum network link-level simulator of end-to-end entanglement and purification"
repository = "https://github.com/ccicconetti/qnet_ll_sim"
readme = "README.md"

[lib]
name = "qnet_ll_sim"
path = "src/lib.rs"

[[bin]]
name = "qnet_ll_sim"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
assert_float_eq = "1.1.4"
average = "0.15.1"
clap = { version = "4.3", features=["derive"] }
env_logger = "0.11.2"
json-unflattening = "0.1.5"
futures = "0.3.30"
log = "0.4.20"
petgraph = "0.7.1"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
shuffle = "0.1.7"
tokio = { version = "1", features = ["full"] }
weighted_rand = "0.4.2"
